# learn

./: .gitignore
.trae/rules/: git-commit-message.md
agents/: README.md
agents/agent-101/: .env.example  .gitignore  README.md  pyproject.toml
agents/agent-101/docs/: ARCHITECTURE.md
agents/agent-101/versions/01-prompt-text/: README.md  agent.py
agents/agent-101/versions/02-message-format/: README.md  agent.py
agents/agent-101/versions/03-python-requests/: README.md  agent.py
agents/agent-101/versions/04-openai-sdk/: README.md  agent.py
agents/agent-101/versions/05-code-extraction/: README.md  agent.py
agents/agent-101/versions/06-code-execution/: README.md  agent.py
agents/agent-101/versions/07-tool-use/: README.md  agent.py
agents/agent-101/versions/07a-prompt-structure/: README.md  agent.py
agents/agent-101/versions/07b-prompt-example/: README.md  agent.py
agents/agent-101/versions/07c-prompt-rules/: README.md  agent.py
agents/agent-101/versions/08-react-loop/: README.md  agent.py  messages.txt
agents/doubao-minimal-agent/: README.md  pyproject.toml  run_agent.py
agents/doubao-minimal-agent/src/: agent.py  prompts.py  tools.py
agents/minimal-agent-20250606/: README.md  pyproject.toml  run_agent.py
agents/minimal-agent-20250606/cookbook/: chapter-1-quick-start.md  chapter-2-agent-core.md  chapter-3-system-prompt.md  chapter-4-tool-system.md  chapter-5-execution-and-extensions.md  reference.md
agents/minimal-agent-20250606/media/: architecture.drawio
agents/minimal-agent-20250606/src/minimal_agent/: agent.py  prompts.py  tools.py
english/: 分词.md  英语笔记.docx
java/vhr/: vhr-dev-env.md  (+2 more)
mvc-demo/: package-lock.json  package.json
rust/: package.json
webgl/: common.js
(+303 files in other folders)
