[project]
name = "agent-101"
version = "0.1.0"
description = "Agent 101 - Learn to build AI agents from scratch"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "smolagents>=0.0.1",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
