[project]
name = "doubao-minimal-agent"
version = "0.1.0"
description = "A minimalistic LLM code agent powered by Doubao Seed (Volcengine Ark)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdownify>=1.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "smolagents>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
